--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone" >
-            <img src="./img/celular.png" alt="celular">
+            <img src="https://i.ibb.co/89jts2Y/celular.png" alt="celular">
         </div>
         <div class="instagram-continue">
             <div  class="group">
-                <img src="./img/logo_instagram.png" class="instagram_logo" alt="instagram logo">
+                <img src="https://i.ibb.co/5WWCsjg/logo-instagram.png" class="instagram_logo" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="./img/foto_perfil.png" alt="foto perfil">
+                    <img src="https://i.ibb.co/BnvbVxL/foto-perfil.png" alt="foto perfil">
                 </div>
             <a href="#" class="instagram-login">continue como alex_neves1990</a>
             <a href="#" class="instagram_logout">Remover conta</a>
